fix: route receipt OCR through Spring Boot backend — complete production parity fix
CRITICAL SECURITY: Remove GEMINI_API_KEY from Flutter Web browser
- vercel-build.sh: Remove --dart-define=GEMINI_API_KEY (key is backend-only)
- env_config.dart: Remove hardcoded fallback API key from source code
- scan_receipt_page.dart: Route receipt scanning through backendOcrServiceProvider
  (calls Spring Boot /api/v1/ocr/scan-receipt), not direct Gemini from browser

BACKEND FIXES (Spring Boot / Render):
- application.properties: Centralize under gemini.api.key=\
  Add multipart limits (10MB file / 15MB request), OCR_DEBUG flag, gemini.model
- OCRService.java: Full rewrite — responseSchema, structured logging with requestId,
  @PostConstruct startup validation, proper HTTP error classification, centralized prompt
- AIService.java: Remove System.getenv(AI_API_KEY) bypass, use @Value(gemini.api.key)
- HealthController.java: Add geminiConfigured:true/false (never exposes key value)

NEW Flutter service:
- backend_ocr_service.dart: BackendOcrService routes OCR through Spring Boot
- core_providers.dart: Add backendOcrServiceProvider

Architecture after this fix:
  Flutter Web (Vercel) -> Spring Boot (Render) -> Gemini API
  GEMINI_API_KEY lives only in Render environment variables